--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ DATABASE_URL="postgresql://neondb_owner:npg_Fwa9xZl5LKgd@ep-jolly-paper-ad5rnis9
 
 # NextAuth
 NEXTAUTH_URL="https://todo-auth-system.vercel.app"   
-NEXTAUTH_SECRET="1234567"
+NEXTAUTH_SECRET="fjgHh98*2hH23jhhG2jJH@##92Jsaj7k"
 
 # Pusher (real-time notifications)
 PUSHER_APP_ID="your-pusher-app-id"
