--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "db:generate": "drizzle-kit generate:pg",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push:pg",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:init": "node lib/db/init.js",
+    "fix-deployment": "node scripts/fix-production-deployment.js",
+    "deploy": "node scripts/deploy-production.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
