--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "force-setup": "node scripts/force-database-setup.js",
     "fix-admin": "node scripts/fix-admin-users.js",
     "setup-admin": "node scripts/setup-default-admin.js",
-    "seed": "node scripts/seed-database.js"
+    "seed": "node scripts/seed-database.js",
+    "test-delete": "node scripts/test-delete-user.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
